Fix audio widget overflow

--- a/app/assets/stylesheets/admin/audio.css.scss
+++ b/app/assets/stylesheets/admin/audio.css.scss
@@ -1,4 +1,5 @@
 .audio-fields {
+    overflow: scroll;
     margin-bottom: 10px;
     padding: 5px;
     
